              for better performance.
        Class HilbertPrimal:
            - The header no longer includes the Normaliz headers (which
              Regina does not actually ship with its development files).
        Class Integer:
            - New tightDecoding() routines.
        Class IntersectionForm:
            - New class to compute invariants of intersection forms.
        Class Isomorphism:
            - Replaced apply() with the bracket operator.  The old apply()
              is now a deprecated alias.
            - Deprecated applyInPlace(), since this is no faster than
              calling tri = iso(tri).
            - Added bracket operators to apply an isomorphism to a
              FacetSpec or a FacetPairing.
            - Added pre/postincrement operators for iterating through
              all permutations of a given size.
        Class LargeInteger:
            - New tightDecoding() routines.
        Class Laurent<T>, Laurent2<T>:
            - New tightDecoding() routines.
        Class Matrix:
            - Routine det() now throws an exception if the matrix is not
              square (this is a precondition), and now returns 1 if the
              matrix is detected to be 0-by-0 (although such matrices are
              formally not supported by the Matrix class).
            - You can now multiply a matrix over type T with a matrix or vector
              over type U, where T and U are different types.
        Class NormalHypersurface:
            - New operators * and *= for taking integer multiples.  The old
              doubleHypersurface() is now deprecated.
            - New routine scaleDown().
        Class NormalSurface:
            - New operators * and *= for taking integer multiples.  The old
              doubleSurface() is now deprecated.
            - New routine scaleDown().
            - New routine isNormalEdgeLink().
        Class Perm<n>:
            - Added tightEncode(), tightEncoding() and tightDecoding().