@@ -73,6 +73,9 @@ void addIsomorphism(pybind11::module_& m, const char* name) {
         })
         .def(pybind11::self * pybind11::self)
         .def("inverse", &Isomorphism<dim>::inverse)
+        .def("tightEncoding", &Isomorphism<dim>::tightEncoding)
+        .def_static("tightDecoding", overload_cast<const std::string&>(
+            &Isomorphism<dim>::tightDecoding))
         .def_static("random", &Isomorphism<dim>::random,
             pybind11::arg(), pybind11::arg("even") = false)
         .def_static("identity", &Isomorphism<dim>::identity)
